<resources>
    <string name="app_name">Snap App</string>
    <string name="bookingTitle">Book a Time</string>
    <string name="button_book_label">Book</string>
    <string name="monday_short">MON</string>
    <string name="tuesday_short">TUE</string>
    <string name="wednesday_short">WED</string>
    <string name="thursday_short">THU</string>
    <string name="saturday_short">SAT</string>
    <string name="friday_short">FRI</string>
    <string name="sunday_short">SUN</string>
    <string name="previous_week_description">Go to the previous week</string>
    <string name="next_week_description">Go to the next week</string>
    <string name="default_week">Week 1</string>
    <string name="date_text_default">1</string>
    <string name="default_booking_start_end_dates">1 Jan - 6 Jan</string>
    <string name="plumber">Plumber</string>
    <string name="salon">Salon</string>
    <string name="electrician">Electrician</string>
    <string name="others">Others</string>
    <string name="pyb">Post Your Business</string>
    <string name="plumberimg">plumberimg</string>
    <string name="salonimg">salonimg</string>
    <string name="electricianimg">electricianimg</string>
    <string name="othersimg">othersimg</string>
    <string name="services">Services</string>
    <string name="menu">Home</string>
    <string name="dos">Description of service</string>
    <string name="username">Name of person providing service</string>
    <string name="address">Enter Address</string>
    <string name="phone">Enter Phone Number</string>
    <string name="email">Enter Email Address</string>
    <string name="amount">Enter Amount</string>
    <string name="confirm">Confirm</string>
    <string name="businessimg">businessimg</string>
    <string name="Order">Order Confirmation</string>
    <string name="checkout">Checkout</string>
    <string name="fn">First name</string>
    <string name="ln">Last name</string>
    <string name="enteraddress">Address</string>
    <string name="postal">Postal code</string>
    <string name="city">City</string>
    <string name="emailad">Email address</string>
    <string name="phonen">Phone number</string>
    <string name="candainformation">Contact and Address Information</string>
    <string name="confirmbutton">Confirm</string>
    <string name="book_button_message">Please select a time</string>
</resources>